changed hero information on first page and background picture for the hero

--- a/src/index.html
+++ b/src/index.html
@@ -42,31 +42,19 @@ eleventyNavigation:
     <section id="hero">
         <div class="cs-container">
             <div class="cs-flex-group">
-                <span class="cs-topper">mountain hiking society</span>
-                <h1 class="cs-title">Explore the World with Exciting People</h1>
+                <span class="cs-topper">Top Chef Fantasy League</span>
+                <h1 class="cs-title">WISCONSIN</h1>
                 <p class="cs-text">
-                    Tincidunt lobortis feugiat vivamus at augue eget arcu dictum varius. Nibh tortor id aliquet lectus proin nibh condimentum.
+                    Who cut the cheese?
                 </p>
-                <a href="/about" class="cs-button-solid">Explore More</a>
-                <a href="/contact" class="cs-button-transparent">
-                    <img
-                    class="cs-img"
-                    loading="lazy"
-                    decoding="async"
-                    src="https://csimg.nyc3.digitaloceanspaces.com/Hero/play.svg"
-                    alt="play icon"
-                    width="17"
-                    height="17" />
-                    Get in Touch
-                </a>
             </div>
         </div>
 
         <!-- Background Image -->
         <picture class="cs-picture">
-            <source media="(max-width: 600px)" srcset="/assets/images/landing-m.webp">
-            <source media="(min-width: 601px)" srcset="/assets/images/landing.jpg">
-            <img aria-hidden="true" decoding="async" src="/assets/images/landing.jpg" alt="new home" width="2500" height="1667" loading="eager">
+            <source media="(max-width: 600px)" srcset="/assets/images/contestants.jpg">
+            <source media="(min-width: 601px)" srcset="/assets/images/contestants.jpg">
+            <img aria-hidden="true" decoding="async" src="/assets/images/contestants.jpg" alt="new home" width="2500" height="1667" loading="eager">
         </picture>
     </section>
 
