removed services and added pics to the side by side. Added content for the 4 participants in the top chef league

--- a/src/index.html
+++ b/src/index.html
@@ -43,9 +43,10 @@ eleventyNavigation:
         <div class="cs-container">
             <div class="cs-flex-group">
                 <span class="cs-topper">Top Chef Fantasy League</span>
-                <h1 class="cs-title">WISCONSIN</h1>
+                <h1 class="cs-title">Dive into the Culinary Battle of the Dairy State!
+                </h1>
                 <p class="cs-text">
-                    Who cut the cheese?
+                    Join Gisella, Amy, Chris, and Cody in a gastronomic battle where skills, strategy, and a pinch of luck will determine the next Top Chef Fantasy League Champion!
                 </p>
             </div>
         </div>
@@ -59,131 +60,43 @@ eleventyNavigation:
     </section>
 
     <!-- ============================================ -->
-    <!--                  Services                    -->
-    <!-- ============================================ -->
-
-    <section id="services" class="services">
-        <!-- Get Icons From flaticon.com -->
-        <div class="card">
-            <picture>
-                <img
-                aria-hidden="true"
-                decoding="async"
-                src="/assets/svgs/service1.svg"
-                alt="appliance"
-                width="48"
-                height="48" />
-            </picture>
-            <h2>Service 1</h2>
-            <p>Talk about the service with keywords people will be searching for it by. Keep it 1-2 sentences.</p>
-        </div>
-        <div class="card">
-            <picture>
-                <img
-                aria-hidden="true"
-                decoding="async"
-                src="/assets/svgs/service2.svg"
-                alt="appliance"
-                width="48"
-                height="48" />
-            </picture>
-            <h2>Service 2</h2>
-            <p>Talk about the service with keywords people will be searching for it by. Keep it 1-2 sentences.</p>
-        </div>
-        <div class="card">
-            <picture>
-                <img
-                aria-hidden="true"
-                decoding="async"
-                src="/assets/svgs/service3.svg"
-                alt="appliance"
-                width="48"
-                height="48" />
-            </picture>
-            <h2>Service 3</h2>
-            <p>Talk about the service with keywords people will be searching for it by. Keep it 1-2 sentences.</p>
-        </div>
-    </section>
-
-    <!-- ============================================ -->
     <!--                 Side By Side                 -->
     <!-- ============================================ -->
 
     <section id="sbs">
         <div class="cs-container">
-            <!-- Left Image Section -->
+            <!-- Left Image Section --> 
             <div class="cs-left">
                 <picture class="cs-picture cs-picture1">
-                    <source media="(max-width: 600px)" srcset="/assets/images/cabinets2-m.jpg">
-                    <source media="(min-width: 601px)" srcset="/assets/images/cabinets2.jpg">
-                    <img aria-hidden="true" decoding="async" src="/assets/images/cabinets2.jpg" alt="cabinets" loading="lazy" width="400" height="563">
+                    <source media="(max-width: 600px)" srcset="/assets/images/codyamy-2.jpg">
+                    <source media="(min-width: 601px)" srcset="/assets/images/codyamy-2.jpg">
+                    <img aria-hidden="true" decoding="async" src="/assets/images/codyamy-2.jpg" alt="cabinets" loading="lazy" width="400" height="563">
                 </picture>
                 <picture class="cs-picture cs-picture2">
-                    <source media="(max-width: 600px)" srcset="/assets/images/construction-m.jpg">
-                    <source media="(min-width: 601px)" srcset="/assets/images/construction.jpg">
-                    <img aria-hidden="true" decoding="async" src="/assets/images/construction.jpg" alt="house" loading="lazy" width="400" height="563">
+                    <source media="(max-width: 600px)" srcset="/assets/images/thegroup-2.jpg">
+                    <source media="(min-width: 601px)" srcset="/assets/images/thegroup-2.jpg">
+                    <img aria-hidden="true" decoding="async" src="/assets/images/thegroup-2.jpg" alt="cabinets" loading="lazy" width="400" height="563">
                 </picture>
             </div>
             <!-- Right Content Section-->
             <div class="cs-right">
-                <span class="cs-topper">About Us</span>
-                <h2 class="cs-title">About Company Title</h2>
+                <span class="cs-topper"></span>
+                <h2 class="cs-title">Top Chef Fantasy</h2>
                 <p class="cs-text">
-                    In consequat tincidunt turpis sit amet imperdiet. Praesent Class officelan nonatoureanor mauris laoreet, iaculis libero quis. Curabitur et tempus eri consequat tincidunt turpis sit amet imperdiet. Praesent nonatourean olei aptent taciti sociosqu ad litora torquent per.
+                    <strong>Gisella "Rode Buddha to a Season 20 Win"</strong><br>
+The reigning champ, Gisella, returns with her eyes on the prize. Last season, she rode the wave of culinary excellence straight to victory. Will her keen intuition for talent bring her to the top once again?
+                <p class="cs-text">
+                    <strong>Amy "As Long as Cody Doesn't Win"</strong><br>
+Amy's in it to win it — with one small caveat: Cody can't snag the trophy. With a competitive fire and a knack for predicting dark horses, Amy's strategy might just stir the pot enough to keep Cody at bay.
                 </p>
                 <p class="cs-text">
-                    In consequat tincidunt turpis sit amet imperdiet. Praesent Class officelan nonatoureanor mauris laoreet, iaculis libero quis. Curabitur et tempus eri consequat tincidunt turpis sit amet imperdiet. Praesent nonatourean olei aptent taciti sociosqu ad litora torquent per.
-                </p>
-                <div class="cs-flex-group">
-                    <p class="cs-flex-p">
-                        In consequat tincidunt turpis sit amet imperdiet. Praesent Classei consequat tincidunt turpis sit amet imperdiet for mind.
-                    </p>
-                    <span class="cs-name">Justin Time</span>
-                    <span class="cs-job">CEO-Founder</span>
-                    <img 
-                    class="cs-quote-icon"
-                    loading="lazy"
-                    decoding="async"
-                    src="https://csimg.nyc3.digitaloceanspaces.com/SideBySide/quote-white.svg"
-                    alt="gavel"
-                    width="136"
-                    height="77" />
-                </div>
-                <a href="/about" class="cs-button-solid">More About Us</a>
-            </div>
-        </div>
-    </section>
-
-    <!-- ============================================ -->
-    <!--            Extra Content To Rank             -->
-    <!-- ============================================ -->
-
-    <section id="sbs-r">
-        <div class="cs-container">
-            <!-- Left Image Section -->
-            <div class="cs-left">
-                <picture class="cs-picture cs-picture1">
-                    <source media="(max-width: 600px)" srcset="/assets/images/construction-m.jpg">
-                    <source media="(min-width: 601px)" srcset="/assets/images/construction.jpg">
-                    <img aria-hidden="true" decoding="async" src="/assets/images/construction.jpg" alt="house" loading="lazy" width="400" height="560">
-                </picture>
-                <picture class="cs-picture cs-picture2">
-                    <source media="(max-width: 600px)" srcset="/assets/images/cabinets2-m.jpg">
-                    <source media="(min-width: 601px)" srcset="/assets/images/cabinets2.jpg">
-                    <img aria-hidden="true" decoding="async" src="/assets/images/cabinets2.jpg" alt="cabinets" loading="lazy" width="400" height="560">
-                </picture>
-            </div>
-            <!-- Right Content Section-->
-            <div class="cs-right">
-                <span class="cs-topper">SEO Ranking</span>
-                <h2 class="cs-title">Talk about a main service keyword</h2>
-                <p class="cs-text">
-                    In consequat tincidunt turpis sit amet imperdiet. Praesent Class officelan nonatoureanor mauris laoreet, iaculis libero quis. Curabitur et tempus eri consequat tincidunt turpis sit amet imperdiet. Praesent nonatourean olei aptent taciti sociosqu ad litora torquent per.
+                    <strong>Chris "Rasika My #1"</strong><br>
+Chris, a true connoisseur of talent, has his sights set on Rasika, his top pick from the get-go. With an eye for standout chefs and strategic gameplay, Chris is all in, betting on skill and a bit of culinary flair to clinch the title.
                 </p>
                 <p class="cs-text">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non tenetur, iure nihil ipsam qui atque commodi id voluptatem nesciunt, quis animi fuga cum doloribus! Eaque laboriosam, unde consectetur iure asperiores ullam. Consequuntur debitis a voluptatibus vitae optio autem explicabo quia neque est quas, in placeat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus modi laudantium voluptatibus rem libero error minus quia eligendi sapiente eos.
+                   <strong>Cody "This Isn't Golf, You Don't Want Negative Points"</strong><br>
+Cody's back with a vengeance and a new strategy, aiming to turn his past setbacks into this season's success story. Warning to all: he's here to shake things up and prove that he's more than just a wild card.
                 </p>
-                <a href="/blog" class="cs-button-solid">Read our Blog</a>
             </div>
         </div>
     </section>
@@ -194,8 +107,8 @@ eleventyNavigation:
 
     <section id="gallery">
         <div class="cs-container">
-            <span class="cs-topper">Our Portfolio</span>
-            <h2 class="cs-title">Et orci volutpat, back up generator installations</h2>
+            <span class="cs-topper">Meet The Cheftestants</span>
+            <h2 class="cs-title"></h2>
             <div class="cs-image-group">
                 <!-- Row 1-->
                 <div class="cs-row cs-row-1">
@@ -220,9 +133,9 @@ eleventyNavigation:
                 <div class="cs-row cs-row-2">
                     <!-- To add more images, copy and paste this row's picture tags here in order from cs-picture-1 to cs-picture-3 and they will maintain the same layout-->
                     <picture class="cs-picture cs-picture1">
-                        <source media="(max-width: 600px)" srcset="/assets/images/portfolio/port2-m.jpg">
-                        <source media="(min-width: 601px)" srcset="/assets/images/portfolio/port2.jpg">
-                        <img aria-hidden="true" decoding="async" src="/assets/images/portfolio/port2.jpg" alt="new kitchen" loading="lazy" width="400" height="560">
+                        <source media="(max-width: 600px)" srcset="/assets/images/alisha.jpg">
+                        <source media="(min-width: 601px)" srcset="/assets/images/alisha.jpg">
+                        <img aria-hidden="true" decoding="async" src="/assets/images/alisha.jpg" alt="new kitchen" loading="lazy" width="400" height="560">
                     </picture>
                     <picture class="cs-picture cs-picture2">
                         <source media="(max-width: 600px)" srcset="/assets/images/portfolio/port5-m.jpg">
